--- a/app/styles/_docs.scss
+++ b/app/styles/_docs.scss
@@ -102,8 +102,8 @@
   }
 
   // conum (callout nummber from code)
-  .conum[data-value],
-  .hljs-number {
+  // .hljs-number,
+  .conum[data-value] {
     // font-size: .875rem;
     // font-style: normal;
     // background: $body-color;
@@ -327,6 +327,11 @@
     font-weight: normal;
     margin-bottom: 10px;
     margin-top: 15px;
+  }
+
+  h1, h2, h3, h4, h5, h6,
+  .h1, .h2, .h3, .h4, .h5, .h6 {
+    position: relative;
   }
 
   h1, h2, h3, h4, h5, h6,
