right docs from rebased

--- a/app/styles/_docs.scss
+++ b/app/styles/_docs.scss
@@ -1,4 +1,5 @@
 .documentation-page {
+  font-size: .875rem;
 
   .toc {
     display: block !important; // overwrite docbook style
@@ -9,7 +10,7 @@
 
     .sectlevel2 {
         padding-left: 10px;
-        font-size: $small-font-size;
+        // font-size: $small-font-size;
     }
   }
 
@@ -22,7 +23,7 @@
   		// 0 level links
   		.cd-toc-link {
   			display: inline-block;
-  	        padding: .5rem 2rem .5rem .5rem;
+  	        padding: .5rem 2rem .5rem 0;
       		line-height: 1.1;
 
   			&.active {
@@ -32,10 +33,9 @@
 
   	    // Active states
   	    .nav-link {
+          // font-size: 0.95rem;
 
-            font-size: 0.95rem;
-
-  		    &.active {
+          &.active {
   		    	position: relative;
 
   		    	&:before {
@@ -69,7 +69,7 @@
 
   			// ul 1st level
   			.sectlevel1 {
-  				padding: 0 2rem 0 .75rem;
+  				padding: 0 2rem 0 0;
   				margin-bottom: 0;
   			}
 
@@ -182,9 +182,9 @@
 
     caption {
       color: #000;
-      font: italic 85%/1 arial, sans-serif;
+      font: italic 100%/1 arial, sans-serif;
       padding: 1em 0;
-      text-align: center;
+      caption-side: top;
     }
 
     td, th {
@@ -207,6 +207,12 @@
     tbody > tr:last-child > td {
       border-bottom-width: 0;
     }
+  }
+
+  .title {
+    color: #000;
+    font: italic 100%/1 arial, sans-serif;
+    padding: 1em 0 .75em;
   }
 }
 
@@ -302,6 +308,8 @@
     }
   }
 
+  
+
   h1 {
       text-align: center;
   }
@@ -335,12 +343,22 @@
 
   h2 {
     font-size:1.7rem;
+    margin-top: 0 !important;
+    margin-bottom: 0.5em !important;
+  }
+
+  * + .sect1 h2 {
+    margin-top: 3rem !important;
   }
 
   h3 {
     font-size: 1.4rem;
-    margin-bottom: 1rem;
-    margin-top: 3rem;
+    margin-top: 1rem !important;
+    margin-bottom: 1rem !important;
+  }
+  
+  .sect2:not(:first-child) h3 {
+    margin-top: 2rem !important;
   }
 
   h4 {
