--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -186,7 +186,7 @@ $i: "../images/"; // PATH VAR
 	:not(pre)>code {
 		// light
 			color: inherit;
-			background: #e0e0e0;
+			background: #f2f2f2;
 
 	}
 	:not(pre)>code,
