conum margin adjust

--- a/app/styles/_docs.scss
+++ b/app/styles/_docs.scss
@@ -136,8 +136,8 @@
     line-height: 21px;
     font-style: normal;
     border-radius: 50rem;
-    margin-right: -0.5em;
-    margin-left: -0.5em;
+    // margin-right: -0.5em;
+    // margin-left: -0.5em;
     position: relative;
   }
   
