--- a/layouts/partials/head-index.gohtml
+++ b/layouts/partials/head-index.gohtml
@@ -12,6 +12,7 @@
     <link rel="manifest" href= " {{ "/images/fav/site.webmanifest" | relURL }}">
     <link rel="mask-icon" href=" {{ "/images/fav/safari-pinned-tab.svg" | relURL }}" color="#5bbad5">
     <link rel="shortcut icon" href=" {{ "/images/fav/favicon.ico" | relURL }}">
+    <link rel="me" href="https://mastodon.social/@andrus_a"/>
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-config" content=" {{ "images/fav/browserconfig.xml" | relURL }}">
     <meta name="theme-color" content="#ffffff">
