--- a/layouts/partials/head-index.gohtml
+++ b/layouts/partials/head-index.gohtml
@@ -1,4 +1,12 @@
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BE1X04X1GG"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-BE1X04X1GG');
+    </script>
+
     <meta charset="utf-8">
     <title>{{ .Site.Title }}</title>
 
