Fix canonical link tag

--- a/layouts/partials/head-index.gohtml
+++ b/layouts/partials/head-index.gohtml
@@ -25,7 +25,7 @@
     <meta name="msapplication-config" content=" {{ "images/fav/browserconfig.xml" | relURL }}">
     <meta name="theme-color" content="#ffffff">
     <title>agrest - Model-Driven REST Data Services</title>
-    <link rel="canonical" href="http://agrest.io" />
+    <link rel="canonical" href="https://agrest.io{{ .RelPermalink }}" />
 
     {{ partial "assets.html" . }}
 
